# pysonio

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.run/: Run Tests.run.xml
src/pysonio/: __init__.py  content_type.py  endpoints.py  errors.py  filters.py  utils.py
src/pysonio/models/: absence_balance.py  absence_periods.py  absence_types.py  authentication.py  employments.py  error_response.py  meta.py  org_units.py  pagination.py  persons.py
test/: conftest.py  test_absence_balance.py  test_absence_periods.py  test_absence_types.py  test_auth.py  test_employments.py  test_org_unit.py  test_persons.py
