[project]
name = "pysonio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"pysonio" = ["py.typed"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyrefly>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = false

[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "I", "B", "C4", "UP", "E401"]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "UP045"]

[tool.ruff.lint.isort]
force-single-line = true
